# nav_simulator

./: README.md  pyproject.toml
nav_simulator/: agent.py  nav2d_env.py  states_config.py
nav_simulator/config/: config.yaml
nav_simulator/dynamics/: pt_mass_w_heading_2o_dynamics.py
nav_simulator/evaluation/: evaluator.py
nav_simulator/evaluation/utils/: saving.py
nav_simulator/policies/: base_policy.py  feed_through_policy.py  mpc_policy.py  social_forces_policy.py
nav_simulator/scenarios/: agent_scenarios.py
nav_simulator/sensors/: Sensor.py  other_agents_params_sensor.py  other_agents_states_sensor.py
nav_simulator/utils/: end_conditions.py  utils.py
nav_simulator/visualization/: matplotlib_visualizer.py  mpc_visualizer.py  mppi_visualizer.py  test.py  visualizer.py
